--- a/English.lproj/Preferences.xib
+++ b/English.lproj/Preferences.xib
@@ -1162,7 +1162,7 @@
 				<string key="NSFrameSize">{371, 409}</string>
 			</object>
 			<object class="NSView" id="604353290">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSBox" id="131918831">
@@ -1178,6 +1178,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{17, 272}, {108, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="757426655">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1200,6 +1201,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 232}, {119, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="902982731">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1222,6 +1224,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 212}, {178, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="72044371">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1244,6 +1247,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 192}, {118, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="539754790">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1266,6 +1270,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 92}, {202, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="899533923">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1288,6 +1293,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 72}, {114, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="408353698">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1310,6 +1316,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 52}, {112, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="752121527">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1332,6 +1339,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 132}, {180, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="823705564">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1354,6 +1362,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 152}, {166, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="975740779">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1376,6 +1385,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 32}, {74, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="402700685">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1398,6 +1408,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{17, 12}, {105, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="883683614">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1420,6 +1431,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 172}, {123, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="603233174">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1442,6 +1454,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{17, 252}, {157, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="231196381">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1464,6 +1477,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 112}, {142, 18}}</string>
 										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="347884061">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1481,13 +1495,38 @@
 											<int key="NSPeriodicInterval">25</int>
 										</object>
 									</object>
+									<object class="NSButton" id="13251118">
+										<reference key="NSNextResponder" ref="10416000"/>
+										<int key="NSvFlags">268</int>
+										<string key="NSFrame">{{16, 292}, {170, 18}}</string>
+										<reference key="NSSuperview" ref="10416000"/>
+										<reference key="NSWindow"/>
+										<bool key="NSEnabled">YES</bool>
+										<object class="NSButtonCell" key="NSCell" id="503808197">
+											<int key="NSCellFlags">-2080244224</int>
+											<int key="NSCellFlags2">0</int>
+											<string key="NSContents">Amending A Changeset</string>
+											<reference key="NSSupport" ref="18135699"/>
+											<reference key="NSControlView" ref="13251118"/>
+											<int key="NSButtonFlags">1211912703</int>
+											<int key="NSButtonFlags2">2</int>
+											<reference key="NSNormalImage" ref="555975549"/>
+											<reference key="NSAlternateImage" ref="856280521"/>
+											<string key="NSAlternateContents"/>
+											<string key="NSKeyEquivalent"/>
+											<int key="NSPeriodicDelay">200</int>
+											<int key="NSPeriodicInterval">25</int>
+										</object>
+									</object>
 								</array>
-								<string key="NSFrame">{{1, 1}, {234, 298}}</string>
+								<string key="NSFrame">{{1, 1}, {234, 318}}</string>
 								<reference key="NSSuperview" ref="131918831"/>
+								<reference key="NSWindow"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{255, 16}, {236, 314}}</string>
+						<string key="NSFrame">{{255, 25}, {236, 334}}</string>
 						<reference key="NSSuperview" ref="604353290"/>
+						<reference key="NSWindow"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
 							<int key="NSCellFlags">67239424</int>
@@ -1519,6 +1558,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 32}, {80, 18}}</string>
 										<reference key="NSSuperview" ref="268265395"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="871775019">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1541,6 +1581,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 92}, {130, 18}}</string>
 										<reference key="NSSuperview" ref="268265395"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="552292618">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1563,6 +1604,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 12}, {74, 18}}</string>
 										<reference key="NSSuperview" ref="268265395"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="905977980">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1585,6 +1627,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 72}, {142, 18}}</string>
 										<reference key="NSSuperview" ref="268265395"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="655960167">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1607,6 +1650,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 52}, {149, 18}}</string>
 										<reference key="NSSuperview" ref="268265395"/>
+										<reference key="NSWindow"/>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSButtonCell" key="NSCell" id="285757906">
 											<int key="NSCellFlags">-2080244224</int>
@@ -1627,10 +1671,12 @@
 								</array>
 								<string key="NSFrame">{{1, 1}, {234, 118}}</string>
 								<reference key="NSSuperview" ref="932378556"/>
+								<reference key="NSWindow"/>
 							</object>
 						</array>
-						<string key="NSFrame">{{17, 196}, {236, 134}}</string>
+						<string key="NSFrame">{{17, 225}, {236, 134}}</string>
 						<reference key="NSSuperview" ref="604353290"/>
+						<reference key="NSWindow"/>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
 							<int key="NSCellFlags">67239424</int>
@@ -1650,7 +1696,9 @@
 						<bool key="NSTransparent">NO</bool>
 					</object>
 				</array>
-				<string key="NSFrameSize">{508, 350}</string>
+				<string key="NSFrameSize">{508, 379}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 			</object>
 			<object class="NSView" id="358870838">
 				<nil key="NSNextResponder"/>
@@ -2962,6 +3010,9 @@
 				<string key="NSFrameSize">{387, 89}</string>
 			</object>
 			<object class="NSUserDefaultsController" id="946571802">
+				<array class="NSMutableArray" key="NSDeclaredKeys">
+					<string>DisplayWarningForAmend</string>
+				</array>
 				<bool key="NSSharedInstance">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="1056986908">
@@ -4264,6 +4315,22 @@
 					</object>
 					<int key="connectionID">1639</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: values.DisplayWarningForAmend</string>
+						<reference key="source" ref="13251118"/>
+						<reference key="destination" ref="946571802"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="13251118"/>
+							<reference key="NSDestination" ref="946571802"/>
+							<string key="NSLabel">value: values.DisplayWarningForAmend</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">values.DisplayWarningForAmend</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">1650</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -5480,6 +5547,7 @@
 							<reference ref="688005529"/>
 							<reference ref="395176435"/>
 							<reference ref="830679964"/>
+							<reference ref="13251118"/>
 						</array>
 						<reference key="parent" ref="604353290"/>
 					</object>
@@ -6071,6 +6139,19 @@
 						<reference key="object" ref="616407977"/>
 						<reference key="parent" ref="815572005"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1647</int>
+						<reference key="object" ref="13251118"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="503808197"/>
+						</array>
+						<reference key="parent" ref="131918831"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">1648</int>
+						<reference key="object" ref="503808197"/>
+						<reference key="parent" ref="13251118"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -6346,7 +6427,7 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 				<string key="1276.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1277.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1285.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="1423.IBEditorWindowLastContentRect">{{357, 404}, {508, 350}}</string>
+				<string key="1423.IBEditorWindowLastContentRect">{{357, 375}, {508, 379}}</string>
 				<string key="1423.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1424.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1425.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -6431,6 +6512,8 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 				<string key="1637.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1645.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="1646.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1647.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="1648.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="81.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="930.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="973.IBEditorWindowLastContentRect">{{126, 741}, {459, 266}}</string>
@@ -6468,7 +6551,7 @@ dGVyLiAgKC0tc2ltaWxhcml0eSBvcHRpb24pA</string>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1646</int>
+			<int key="maxID">1650</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
